# snapcraft-mycroft-core

./: .gitignore  Jenkinsfile  README.md  snapcraft.yaml
desktop/: mycroft.desktop
patches/: mimic-pulseaudio.diff  msm-skillsdir.diff  mycroft-cache.diff  mycroft-skills.diff
scripts/: mycroft-launch
snap/: snapcraft.yaml
snap/gui/: mycroft.desktop
snap/hooks/: install  post-refresh
snap/local/: apps.libsonnet  environment.libsonnet  gnomePlatformFiles.libsonnet  parts.libsonnet  plugs.libsonnet  snapcraft.jsonnet
snapcraft-preload/: CMakeLists.txt  preload.cpp  snapcraft-preload.in
